# scour

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.yml  ecosystem.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  mcp.rs  models.rs  search.rs
src/engines/: brave.rs  duckduckgo.rs  mod.rs  yahoo.rs
