[package]
name = "scour"
version = "0.0.1"
edition = "2024"
description = "Lightning-fast web search API — scrapes Brave and Yahoo, returns normalized JSON. HTTP or MCP server for AI agents."
license = "CC-BY-NC-4.0"
repository = "https://github.com/alikhaleghi/scour"
homepage = "https://github.com/alikhaleghi/scour"
authors = ["Ali Khaleghi <alikhaleghi.dev@gmail.com>"]

[dependencies]
axum = "0.8.8"
futures = "0.3.32"
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
